styles.css
/* ... */
/*
// Icon links
/////////////

// These have an icon combined in the link, so you can click the icon,
// but it isn't underlined. For accessibility reasons it's important this
// effect is not created using two separate links.
*/
a.forumng-iconlink:link,
a.forumng-iconlink:visited,
a.forumng-iconlink:active,
a.forumng-iconlink:hover {
    text-decoration: none;
    color: black;
}
.forumng-iconlink:hover .forumng-textbyicon {
    text-decoration: underline;
}

.forumng-iconlink img {
    position: relative;
    top: 4px;
}

.forumng-feedlinks a:link,
.forumng-feedlinks a:visited,
.forumng-feedlinks a:active {
    text-decoration: none;
    color: black;
}
.generaltable .forumng-feedlinks a:link,
.generaltable .forumng-feedlinks a:visited,
.generaltable .forumng-feedlinks a:active {
    color: black;
}

.forumng-feedlinks a:hover {
    text-decoration: underline;
}
.forumng-feedlinks a.forumng-iconlink:hover {
    text-decoration: none;
}

/*
// Errors
/////////
*/

.forumng-errormessage {
    font-size:0.85em;
    color:#333;
    margin:1em 0;
}

/*
// Index page styles
////////////////////
*/
.forumng-subscribecell form,
.forumng-subscribecell div {
    display:inline;
}
.forumng-subscribecell input,
.forumng-feedlinks {
    font-size:0.85em;
}
.forumng-subscribecell {
    white-space: nowrap;
}

#page-mod-forumng-index .generaltable {
    width: 100%;
    margin-top: 1em;
    margin-bottom: 1em;
}
.forumng-allsubscribe {
    text-align: center;
}
.forumng-allsubscribe form,
.forumng-allsubscribe div {
    display: inline;
}

/*
// View page styles
///////////////////
*/

#page-mod-forumng-view .generaltable,
#page-mod-forumng-feature-deletedposts-list .generaltable {
    width: 100%;
}
#page-mod-forumng-view .generaltable th,
#page-mod-forumng-feature-deletedposts-list .generaltable th {
    text-align: left;
}
.forumng-startedby td {
     overflow: hidden;
}
.forumng-startedby a,
.forumng-startedby img {
    vertical-align:middle;
}
.forumng-startedby img {
    margin-right:12px;
}

form.forumng-paste-buttons {
    margin-left: 0.85em;
    padding: 0.7em 0.5em;
    background: #FFD991;
}
.ie7 form.forumng-paste-buttons {
    padding: 0.5em 0.5em;
}

#forumng-buttons {
    margin:0 0 1em;
}
#page-mod-forumng-view #forumng-buttons {
    margin-top:0.6em;
}

#page-mod-forumng-subscribers #forumng-buttons {
    margin-bottom: 1em;
}

.forumng_discuss_tagfilter .helptooltip {
    margin-right: 5px;
}

.forumng-subscribe-options p,
.forumng-subscribe-options form,
.forumng-subscribe-options form div {
    display:inline;
}
.forumng-subscribe-options form {
    margin-left: 1em;
}
.forumng-subscribe-admin {
    font-size: 0.85em;
}

.forumng-subscribe-options {
    margin-top: 2em;
}

.forumng-subscribe-details {
    display: inline;
}

.forumng-subscribe-options h3 {
    margin: 0em;
    font-size: 1em;
}

.forumng-archivewarning {
    margin:1em 0;
    color: red;
}

.forumng-timeout td.cell,
.forumng-timeout td.cell a:link,
.forumng-timeout td.cell a:visited,
.forumng-timeout td.cell a:active,
.forumng-deleted td.cell,
.forumng-deleted td.cell a:link,
.forumng-deleted td.cell a:visited,
.forumng-deleted td.cell a:active {
    color:#888;
}
.forumng-deleted .forumng-subject {
    text-decoration:line-through;
}

#page-mod-forumng-view .groupselector,
#page-mod-forumng-subscribers .groupselector,
#page-mod-forumng-feature-readers-readers .groupselector,
#page-mod-forumng-feature-userposts .groupselector {
    float:none;
}

.forumng-subject img {
  float:left;
  margin-right:8px;
}

.forumng-divider {
    height:8px;
}

.forumng-unreadcount form,
.forumng-unreadcount form div {
    display:inline;
}

a.forumng-sortlink:link,
a.forumng-sortlink:visited {
    text-decoration:none;
}
a.forumng-sortlink:hover {
    text-decoration:underline;
}

.forumng-sortcurrent {
    padding-left:0.3em;
}

#page-mod-forumng-view .forumng-feedlinks,
#page-mod-forumng-discuss .forumng-feedlinks {
    margin-top: 0.5em;
}

.forumng-draft-inreplyto {
    font-size: 0.85em;
}

.forumng-drafts {
    margin: 11px 0 2em;
}
.forumng-drafts .forumng-heading,
.forumng-flagged .forumng-heading {
    margin: 0 0 0.5em;
}
.forumng-drafts .forumng-heading h3,
.forumng-flagged .forumng-heading h3{
    display: inline;
    margin: 0;
}
.forumng-flagged {
    margin: 2em 0 1em;
}

div.forumng-flag,
div.forumng-flagpost {
    display: inline;
    padding-right: 0.5em;
}

form.forumng-flag,
form.forumng-flagpost {
    display: inline;
    padding-left: 0.5em;
}
form.forumng-flag div,
form.forumng-flagpost div {
    display:inline;
}
div.forumng-flagpost a img {
    padding-right: 0.5em;
    vertical-align: -3px;
}

.forumng_header_info .show-message-notify {
    margin-bottom: 7px;
}
.forumng-shareinfo {
    margin: 2em 0 2em;
}

.forumng-flagged-link {
    padding-bottom: 2px;
    display: flex;
    margin-top: 1px;
}

.forumng-flagged-link a {
    text-decoration: none;
    margin-right: 10px;
    display: flex;
    align-items: flex-start;
}
.forumng-flagged-link a img {
    margin-right: 5px;
    height: 18px;
    width: 18px;
}
.forumng-flagged-link a img.arrow-down-icon {
    align-self: center;
}
.forumng-flag input[type="image"] {
    width: 18px;
    height: 18px;
    margin-bottom: -2px;
}
.forumng-startedby-wrapper {
    margin-left: 0;
}

.forumng-startedbyimage {
    display: inline;
    float: left;
    margin-right: 0;
}

.forumng-startedbyuser {
    display: inline;
    vertical-align: middle;
    text-align: left;
    width: 355px;
}

.forumng-moderator {
    display: block;
}
.forumng-moderator-flag {
    font-weight: bold;
}

/*
// Discussion page styles
/////////////////////////
*/

#forumng-arrowback {
    margin: 1em 0;
}

.forumng-replies {
    margin-left: 40px;
}

h2.accesshide {
    margin: 0 0 5px 40px;
    padding-bottom: 5px;
    padding-left:0.5em;
    font-size: 0.85em;
    border-bottom: 1px dotted #aaa;
    top: auto;
    left: -10000px;
}
/* ... */

